# harp.device.environment-sensor

./: .gitignore  .gitmodules  device.yml
firmware/: CMakeLists.txt  README.md
firmware/inc/: Arduino.h  config.h  core1_sensor.h  myspi.h
firmware/src/: Adafruit_BME680_rpi.cpp  Arduino.cpp  core1_sensor.cpp  main.cpp  main_debug_noharp.cpp  myspi.cpp
hardware/board/environment_sensor/: environment_sensor.kicad_pcb  environment_sensor.kicad_pro
software/bonsai/Generators/: Generators.csproj
software/bonsai/Interface/: AllenNeuralDynamics.EnvironmentSensor.sln
software/bonsai/Interface/AllenNeuralDynamics.EnvironmentSensor/: AllenNeuralDynamics.EnvironmentSensor.csproj  AsyncDevice.Generated.cs  Device.Generated.cs
software/bonsai/Interface/AllenNeuralDynamics.EnvironmentSensor/Properties/: AssemblyInfo.cs
software/python/: README.md  pyproject.toml
software/python/src/harp_env_sensor/: main.py
software/python/src/harp_env_sensor/models/: device.py
